mdapipkg/objects/Goal__c.object
<CustomObject>
    <fields>
        <fullName>Accounttable__c</fullName>
        <inlineHelpText>First name and last name of Management team member accountable. One person only.</inlineHelpText>
        <label>Accountable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Populate this only if this is a Chapter or Region Specific goal. Filling this in means it will show on the chapter or region home page.</inlineHelpText>
        <label>Chapter/Region</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Chapter, Region</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Chapter Goals</relationshipLabel>
        <relationshipName>ChapterGoals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consulted__c</fullName>
        <label>Consulted</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Year__c</fullName>
        <label>Financial Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Function_Committee__c</fullName>
        <label>Function/Committee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Audit Committee</fullName>
                </value>
                <value>
                    <fullName>Champion Development</fullName>
                </value>
                <value>
                    <fullName>Chapter Health</fullName>
                </value>
                <value>
                    <fullName>Chapter Health - Strategic Planning</fullName>
                </value>
                <value>
                    <fullName>Chapter Health - Succession Planning</fullName>
                </value>
                <value>
                    <fullName>Chapter Plan</fullName>
                </value>
                <value>
                    <fullName>Chapter Relations</fullName>
                </value>
                <value>
                    <fullName>Chief Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Operating Officer</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Compensation Committee</fullName>
                </value>
                <value>
                    <fullName>CRC - Chapters &amp; Regions Committee</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Events Committee</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Family Committee</fullName>
                </value>
                <value>
                    <fullName>FEC - Flagship Events Committee</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Finance Committee</fullName>
                </value>
                <value>
                    <fullName>Finance - Events</fullName>
                </value>
                <value>
                    <fullName>Forum</fullName>
                </value>
                <value>
                    <fullName>Forum Committee</fullName>
                </value>
                <value>
                    <fullName>Governance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Innovation</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goal_Type__c</fullName>
        <formula>IF ( ISPICKVAL(  Chapter__r.Type,&quot;Chapter&quot;), &quot;Chapter Goal&quot;, 
IF ( ISPICKVAL(  Chapter__r.Type,&quot;Region&quot;), &quot;Regional Goal&quot;, 
&quot;Function/Committee Goal&quot; ))</formula>
        <label>Goal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informed__c</fullName>
        <label>Informed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <label>Metric</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YPO</fullName>
                </value>
                <value>
                    <fullName>YPO Gold</fullName>
                </value>
                <value>
                    <fullName>YPO Gold/YPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RD_Region__c</fullName>
        <label>RD Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Australia/New Zealand</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Central US</fullName>
                </value>
                <value>
                    <fullName>East Central US</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>MENA</fullName>
                </value>
                <value>
                    <fullName>North Asia</fullName>
                </value>
                <value>
                    <fullName>Northeastern US</fullName>
                </value>
                <value>
                    <fullName>Pacific US</fullName>
                </value>
                <value>
                    <fullName>South Asia</fullName>
                </value>
                <value>
                    <fullName>Southeast Asia</fullName>
                </value>
                <value>
                    <fullName>Southern US</fullName>
                </value>
                <value>
                    <fullName>Western US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Populate this field only if this is a regional goal. Filling this in means it will show on the Region home page.</inlineHelpText>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Regional Goals</relationshipLabel>
        <relationshipName>Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsible__c</fullName>
        <inlineHelpText>First name and last name of Management team member responsible. One person only.</inlineHelpText>
        <label>Responsible</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smart_Goal__c</fullName>
        <label>Smart Goal</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status1__c</fullName>
        <inlineHelpText>Please Enter the Status as a Percentage. Up to 20% is RED, 20%+ is YELLOW, 80%+ is GREEN</inlineHelpText>
        <label>% Completion</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Status_Indicatior__c</fullName>
        <formula>IF ( Status1__c &gt; 0.79 , IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;green&quot;), 
IF ( Status1__c &gt; 0.2 , IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;yellow&quot;), 
IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;red&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicatior</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF ( Status1__c &gt; 0.79 , &quot;Green&quot;, 
IF ( Status1__c &gt; 0.2 , &quot;Yellow&quot;, 
&quot;Red&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Region__c</fullName>
        <description>If the Chapter/Region field is a Region Account, Super Region field will show that Region&apos;s Parent Account Name. If the Chapter/Region field is a Chapter Account, Super Region field will show that Chapter&apos;s Parent&apos;s Parent Account Name.</description>
        <formula>IF( ISPICKVAL(Chapter__r.Type, &quot;Region&quot;), Chapter__r.Parent.Name,  Chapter__r.Parent.Parent.Name )</formula>
        <label>Super Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <label>Goal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Function_Committee__c</columns>
        <columns>Smart_Goal__c</columns>
        <columns>Metric__c</columns>
        <columns>Chapter__c</columns>
        <columns>Responsible__c</columns>
        <columns>Accounttable__c</columns>
        <columns>Status1__c</columns>
        <columns>Status_Indicatior__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Goal Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_edit_goals_after_one_week</fullName>
        <active>false</active>
        <errorConditionFormula>AND ( Today()- DATEVALUE(CreatedDate) &gt; 1, 
PRIORVALUE( Smart_Goal__c ) &lt;&gt; Smart_Goal__c 
)</errorConditionFormula>
        <errorMessage>You cannot edit a smart goal after it is a week old.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>You_must_choose_a</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL(Function_Committee__c, &quot;Regional Directors&quot;), ISBLANK(TEXT(RD_Region__c)))</errorConditionFormula>
        <errorDisplayField>RD_Region__c</errorDisplayField>
        <errorMessage>If you choose Regional Directors as a Function/Committee you must choose a RD Region to save the record.</errorMessage>
    </validationRules>
</CustomObject>